[tool.poetry]
name = "sam-example-app"
version = "0.1.0"
description = "AWS SAM experiments"
authors = ["ihoubr <ivo.houbrechts@nike.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.43"
requests = "^2.25.1"
aws-lambda-powertools = "^1.9.1"
pytest = "^6.2.1"
pytest-datadir = "^1.3.1"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
j2cli = "^0.3.10"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
